# ZenOfCode-Models

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  docker-compose.yml  makefile  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 290cc91262dc_course_table_created.py
models/: base.py  course.py
tests/: test_course.py
zenofcode_models/: __init__.py
zenofcode_models/models/: base.py  course.py
