# pyproject.toml for ZenOfCode Models (CI/CD Only)

[tool.poetry]
name = "zenofcode-models"
version = "0.1.0"
description = "Shared database models for ZenOfCode"
authors = ["Zen Of Code Dev"]
readme = "README.md"
packages = [{ include = "models" }]

[tool.poetry.dependencies]
python = ">=3.10"
sqlalchemy = "*"         # consider specifying a version range for better reproducibility
psycopg2-binary = "*"     # consider specifying a version range for better reproducibility

[tool.poetry.group.dev.dependencies]
pytest = "*"             # consider specifying a version range, e.g., "^7.0.0"
pre-commit = "^2.20.0"
mypy = "^0.971"

[tool.poetry.repositories]
github = { url = "https://upload.pypi.pkg.github.com/pyfox" }

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
